# ManagerFile

./: CMakeLists.txt  CMakeUserPresets.json  Directory.txt  ListToDelete.h  Manager.sln  README.md
Manager/: ClassDiagram.cd  ClassDiagram1.cd  ClassDiagram3.cd  Directory.txt  DirectoryEdit.cpp  DirectoryEdit.h  Editor.cpp  Editor.h  FileCRUDOperations.h  FileEdit.cpp  FileEdit.h  Header.h  IOperations.h  Manager.vcxproj  Manager.vcxproj.filters  Path.cpp  Path.h  fileEdit.cpp  fileEdit.h  fileedit.h  function.cpp  main.cpp  test.txt
headers/: BinBucket.h  DirectoryProperties.h  DisplayBucketFiles.h  Editor.h  Exception.h  FileComponents.h  FileEdit.h  FileProperties.h  Filter.h  Header.h  IOperations.h  JsonReport.h  LineToAdd.h  List.h  NameEnter.h  Node.h  Path.h  PathContainerFile.h  PathIteratorFile.h  SetNewText.h  TempPath.h  displaytext.h  mainwindow.h  setnewname.h  settingdir.h
source/: BinBucket.cpp  DirectoryProperties.cpp  DisplayBucketFiles.cpp  DisplayBucketFiles.ui  Editor.cpp  Exception.cpp  Exception.ui  FileComponents.cpp  FileEdit.cpp  FileProperties.cpp  FileProperties.ui  Filter.cpp  IOperations.cpp  JsonReport.cpp  JsonReport.ui  LineToAdd.cpp  LineToAdd.ui  List.cpp  ListToDelete.cpp  NameEnter.cpp  NameEnter.ui  Node.cpp  Path.cpp  PathContainerFile.cpp  PathIteratorFile.cpp  SetNewText.cpp  SetNewText.ui  TempPath.cpp  TempPath.ui  displaytext.cpp  displaytext.ui  fucntion.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  setnewname.cpp  setnewname.ui  settingdir.cpp  settingdir.ui
